# opctl

./: .gitignore  CLAUDE.md  PLAYBOOK.md  README.md  opctl.py  pyproject.toml  session.json
opctl/: __init__.py  cli.py  cli_parser.py  command_schema.py  handlers.py  manager.py  shell.py
opctl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
opctl/adapters/: json_repository.py
opctl/backends/: base.py  linux.py  windows.py
opctl/common/: net_utils.py
opctl/core/: models.py
opctl/domain/: __init__.py  interfaces.py
opctl/domain/exceptions/: __init__.py  base.py  network.py
opctl/domain/models/: __init__.py  backend.py  identity.py  interface.py  meta.py  network.py  ntp.py  policy.py  profile.py  system.py
opctl/domain/services/: __init__.py  ip_parser.py  playbook_validator.py  validators.py
opctl/infrastructure/: _resolve.py  linux.py  validators.py  windows.py
opctl/infrastructure/linux/: backend.py
opctl/infrastructure/windows/: backend.py
opctl/use_cases/: __init__.py  bulk_configure_uc.py  commit_policy_uc.py  list_interfaces_uc.py  remove_rule_uc.py  status_report_uc.py  transfer_config_uc.py  view_status_uc.py
tests/: test_backend_config.py  test_cli.py  test_cli_parser.py  test_command_handlers.py  test_json_repository.py  test_linux_backend.py  test_linux_providers.py  test_net_utils.py  test_ntp_providers.py  test_parsers.py  test_playbook_validator.py  test_policy.py  test_resolve_provider.py  test_security.py  test_shell.py  test_use_cases.py  test_windows_backend.py  test_windows_providers.py
(+19 files in other folders)
