[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "opctl"
version = "0.1.0"
description = "Tactical Workstation Bootstrapper"
authors = [{name = "Stephen Trotter"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
opctl = "opctl.cli:main"